Fix article list spacing, open first accordion

--- a/app/wls-app.css
+++ b/app/wls-app.css
@@ -18,6 +18,8 @@ body {
 
 #wls-button-panel {
     margin:2em;
+    text-align:center;
+    /*border:1px solid gray;*/  
 }
 
 #wls-button-panel-secondary {
